# Graphics-OpenGL-Lab-Assignments

./: README.md
Graphics Offline 1/Graphics-Offline-1/: OpenGL.depend
Graphics Offline 1/Graphics-Offline-1/codes/: Sphere-to-Cube.cpp  demoMain.cpp  test.cpp
Graphics Offline 1/demo given codes/: Offline1.layout
Graphics Offline 2/my Codes/: 1505038.cpp
Graphics Offline 2/specifications/: 1505038.cpp
Graphics Offline 2/specifications/test cases/1/: 1505038.cpp  stage2-real.txt
Graphics Offline 3/Assignment 3/: OpenGL
Graphics Offline 3/myCodes/: 1505038.cpp  description.txt  sc.sh
Graphics-Offline-1/: CMakeLists.txt
Graphics-Offline-1/codes/: Wheel.cpp
OpenGLLinuxTest/: CMakeLists.txt
OpenGLLinuxTest/Offline/: 1505038.cpp
OpenGLLinuxTest/codes/: demo.cpp  sphere-to-cube.cpp  test.cpp  wheel.cpp  zigzag-ball.cpp
OpenGLLinuxTest/my_codes/: 1505038.cpp
OpenGLLinuxTest/online/: online.cpp
OpenGLLinuxTest/ray-tracer-offline-codes/: demo.cpp  test.cpp  thimpu.cpp
demo given codes/: Offline1.cbp  Offline1.depend  main.cpp
install and setup of opengl/: Installing GLUT.ppt
install and setup of opengl/OpenGL_CodeBlocks/: OpenGL.layout  main.cpp
install and setup of opengl/OpenGL_Visual_Studio/OpenGl/: OpenGl.vcxproj
